# sleeplab-extractor

./: README.md  pyproject.toml
sleeplab_extractor/: config.py  extract.py  preprocess.py
src/sleeplab_extractor/: __init__.py  config.py  extract.py  preprocess.py
tests/: conftest.py  test_extract.py  test_parse_config.py
tests/data/: example_config.yml
